// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Best clients should limit output 1`] = `
[
  {
    "fullName": "Ash Kethcum",
    "id": 4,
    "paid": 2020,
  },
  {
    "fullName": "Mr Robot",
    "id": 2,
    "paid": 442,
  },
  {
    "fullName": "Harry Potter",
    "id": 1,
    "paid": 442,
  },
]
`;

exports[`Best clients should provide best clients 1`] = `
[
  {
    "fullName": "Ash Kethcum",
    "id": 4,
    "paid": 2020,
  },
  {
    "fullName": "Mr Robot",
    "id": 2,
    "paid": 442,
  },
  {
    "fullName": "Harry Potter",
    "id": 1,
    "paid": 442,
  },
  {
    "fullName": "John Snow",
    "id": 3,
    "paid": 200,
  },
]
`;
